[project]
name = "sender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
]

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"
executionEnvironments = [
  { root = "src" },
]
