[project]
name = "sender"
version = "0.1.0"
description = "Сервис сериализации и отправки данных"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt>=2.3.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
]

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"
include = [
  "src/cnpool",
]
executionEnvironments = [
  { root = "src" },
]
